# hypmod_py

./: .flake8  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
src/hypmod_py/: __init__.py  console.py  wikipedia.py
tests/: conftest.py  test_console.py  test_wikipedia.py
