# pyproject.toml
[tool.poetry]
name = "hypmod-py"
version = "0.1.0"
description = "Following Jolowicz's hypermodern Python series"
authors = ["David Rambo <davidrambo@mailfence.com>"]
homepage = "http://github.com/DavidRambo/hypmod_py"
repository = "http://github.com/DavidRambo/hypmod_py"
readme = "README.md"
license = "MIT"
# packages = [{include = "hypmod_py"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
mypy = "^0.991"
pytype = {version = "^2023.1.17", python = "3.10"}
typeguard = "^2.13.3"
flake8-annotations = "^3.0.0"


[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.2"
flake8 = "^6.0.0"
black = "^22.12.0"
desert = "^2022.9.22"
marshmallow = "^3.19.0"

[tool.poetry.scripts]
hypmod-py = "hypmod_py.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hypmod_py"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
